FIX HistoricoDTO com collect toList