@@ -1,6 +1,7 @@
 package br.com.IngressoFacilAPI.entities.cliente.dto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import br.com.IngressoFacilAPI.entities.cliente.Cliente;
 import br.com.IngressoFacilAPI.entities.ingresso.dto.IngressoDto;
@@ -11,7 +12,7 @@ public class HistoricoDto {
 	private List<IngressoDto> ingressos;
 	
 	public HistoricoDto(Cliente cliente) {
-		this.ingressos = cliente.getIngressos().stream().map(IngressoDto::new).toList();
+		this.ingressos = cliente.getIngressos().stream().map(IngressoDto::new).collect(Collectors.toList());
 	}
 
 }
